src/objects/Terms_and_Conditions__c.object
<CustomObject>
    <description>This object is used to store Attachments holding the terms and conditions on IEC Checkout page</description>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Datetime when the T&amp;C is effective</description>
        <inlineHelpText>Datetime when the T&amp;C is effective</inlineHelpText>
        <label>Effective Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>IS the latest version of T&amp;Cs</inlineHelpText>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Information__c</fullName>
        <label>Related Product Information</label>
        <referenceTo>Product_Information__c</referenceTo>
        <relationshipLabel>Terms and Conditions</relationshipLabel>
        <relationshipName>IEC_Terms_and_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Version_Formula__c</fullName>
        <description>Formula that concatenates the product information ID and the version number for unicity check</description>
        <formula>Product_Information__r.Id + &apos;_v&apos; + TEXT(Version__c)</formula>
        <inlineHelpText>Formula that concatenates the product information ID and the version number for unicity check</inlineHelpText>
        <label>Product Version Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the T&amp;Cs. Can only be modified when it&apos;s Draft.</description>
        <inlineHelpText>Status of the T&amp;Cs. Can only be modified when it&apos;s Draft.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Product_Version__c</fullName>
        <description>Text value copied from the formula field for unicity check</description>
        <inlineHelpText>Text value copied from the formula field for unicity check</inlineHelpText>
        <label>Unique Product Version</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of the T&amp;C</description>
        <inlineHelpText>Version of the T&amp;C</inlineHelpText>
        <label>Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IEC Terms and Conditions</label>
    <nameField>
        <label>Terms and Conditions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IEC Terms and Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>